# nde

./: .editorconfig  .gitignore  CMakeLists.txt  Copyright.txt  DRAFT.txt  Makefile.linux  Makefile.win32  README.md  TODO.txt  bootstrap  bootstrap.ps1  bootstrap.sh  build.ps1  nbuild  nbuild.ps1
include/: nde.h
include/nde/: data-list.h  log.h  process.h  string-list.h  string_list.h
include/nde/api/: process.h  runtime.h  subprocess.h
linux/: Makefile  linux-child.c
linux/api/: runtime.c
platform/linux/: linux-parent.c
platform/linux/api/: runtime.c
platform/win32/: win-child.c
platform/win32/api/: runtime.c
samples/: NdeLock.txt.ini  NdePackage.txt  NdePackage.txt.ini  NdePackage.txt.js  NdePackageDeps.txt
scripts/: install-cmake.ps1  install-cmake.sh  install-curl.ps1  install-curl.sh  install-openssl.ps1  install-perl5.ps1  install-perl5.sh  install-zlib.ps1
src/: data-list.c  https.c  log.c  main.c  process.c  shared-runtime.c  string-list.c  win-parent.c
win/: Makefile
win/api/: process.c  runtime.c
